// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wizard Pattern renders properly 1`] = `
<div
  role="dialog"
>
  <div
    class="modal-backdrop fade in"
  />
  <div
    class="fade in modal"
    role="dialog"
    style="display: block; padding-right: 0px;"
    tabindex="-1"
  >
    <div
      class="modal-lg wizard-pf modal-dialog"
    >
      <div
        class="modal-content"
        role="document"
      >
        <div
          class=""
        >
          <div
            class="modal-header"
          >
            <button
              aria-hidden="true"
              aria-label="Close"
              class="close"
            >
              <span
                aria-hidden="true"
                class="pficon pficon-close"
              />
            </button>
            <h4
              class="modal-title"
            >
              Wizard Pattern Example
            </h4>
          </div>
          <div
            class="wizard-pf-body clearfix modal-body"
          >
            <section
              class="wizard-pf-row"
            >
              <div
                class="wizard-pf-main"
              >
                <div
                  class="blank-slate-pf"
                >
                  <div
                    class="blank-slate-pf-icon spinner spinner-lg"
                  />
                  <div
                    class="blank-slate-pf-main-action"
                  >
                    <h3>
                      Loading...
                    </h3>
                  </div>
                  <div
                    class="blank-slate-pf-secondary-action"
                  >
                    <p>
                      This may take a minute.
                    </p>
                  </div>
                </div>
              </div>
            </section>
          </div>
          <div
            class="wizard-pf-footer modal-footer"
          >
            <button
              class="btn-cancel btn btn-default"
              type="button"
            >
              Cancel
            </button>
            <button
              class="btn btn-default"
              disabled=""
              type="button"
            >
              <span
                aria-hidden="true"
                class="fa fa-angle-left"
              />
              Back
            </button>
            <button
              class="btn btn-primary"
              type="button"
            >
              Close
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Wizard Stateful Pattern renders properly 1`] = `
<div
  role="dialog"
>
  <div
    class="modal-backdrop fade in"
  />
  <div
    class="fade in modal"
    role="dialog"
    style="display: block; padding-right: 0px;"
    tabindex="-1"
  >
    <div
      class="modal-lg wizard-pf modal-dialog"
    >
      <div
        class="modal-content"
        role="document"
      >
        <div
          class=""
        >
          <div
            class="modal-header"
          >
            <button
              aria-hidden="true"
              aria-label="Close"
              class="close"
            >
              <span
                aria-hidden="true"
                class="pficon pficon-close"
              />
            </button>
            <h4
              class="modal-title"
            >
              Wizard Pattern Stateful Example
            </h4>
          </div>
          <div
            class="wizard-pf-body clearfix modal-body"
          >
            <section
              class="wizard-pf-row"
            >
              <div
                class="wizard-pf-main"
              >
                <div
                  class="blank-slate-pf"
                >
                  <div
                    class="blank-slate-pf-icon spinner spinner-lg"
                  />
                  <div
                    class="blank-slate-pf-main-action"
                  >
                    <h3>
                      Loading...
                    </h3>
                  </div>
                  <div
                    class="blank-slate-pf-secondary-action"
                  >
                    <p>
                      This may take a minute.
                    </p>
                  </div>
                </div>
              </div>
            </section>
          </div>
          <div
            class="wizard-pf-footer modal-footer"
          >
            <button
              class="btn-cancel btn btn-default"
              type="button"
            >
              Cancel
            </button>
            <button
              class="btn btn-default"
              disabled=""
              type="button"
            >
              <span
                aria-hidden="true"
                class="fa fa-angle-left"
              />
              Back
            </button>
            <button
              class="btn btn-primary"
              type="button"
            >
              Close
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Wizard loading renders properly 1`] = `
<div
  class="row"
>
  <div
    class="col-sm-12"
  >
    <div
      class=""
    >
      <div
        class="wizard-pf-header"
      >
        <h4
          class="wizard-pf-title"
        >
          Wizard Title
        </h4>
      </div>
      <div
        class="wizard-pf-body"
      >
        <section
          class="wizard-pf-row"
        >
          <div
            class="wizard-pf-main"
          >
            Contents
          </div>
        </section>
      </div>
      <div
        class="wizard-pf-footer"
      >
        <button
          class="btn-cancel btn btn-default"
          type="button"
        >
          Cancel
        </button>
        <button
          class="btn btn-default"
          disabled=""
          type="button"
        >
          <span
            class="i fa fa-angle-left"
          />
          Back
        </button>
        <button
          class="btn btn-primary"
          disabled=""
          type="button"
        >
          Next
          <span
            class="i fa fa-angle-right"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Wizard main contents renders properly 1`] = `
<div
  class=""
>
  <div
    class="wizard-pf-header"
  >
    <h4
      class="wizard-pf-title"
    >
      Wizard Title
    </h4>
  </div>
  <div
    class="wizard-pf-body"
  >
    <section
      class="wizard-pf-row"
    >
      <div
        class="wizard-pf-main"
      >
        <div
          class="wizard-pf-contents"
        >
          Content
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Wizard review contents renders properly 1`] = `
<div
  class=""
>
  <div
    class="wizard-pf-header"
  >
    <h4
      class="wizard-pf-title"
    >
      Wizard Title
    </h4>
  </div>
  <div
    class="wizard-pf-body"
  >
    <section
      class="wizard-pf-row"
    >
      <div
        class="wizard-pf-main"
      >
        <div
          class="wizard-pf-review-steps"
        >
          <ul
            class="list-group"
          >
            <li
              class="list-group-item"
            >
              <a
                class="collapsed"
                href="#"
              >
                Step 1 Review
              </a>
              <div
                class="wizard-pf-review-substeps collapse"
              >
                <ul
                  class="list-group"
                >
                  <li
                    class="list-group-item"
                  >
                    <a
                      class="collapsed"
                      href="#"
                    >
                      <span
                        class="wizard-pf-substep-number"
                      >
                        Review 1.1
                      </span>
                      <span
                        class="wizard-pf-substep-title"
                      >
                        Review 1.1
                      </span>
                    </a>
                    <div
                      class="wizard-pf-review-content collapse"
                    >
                      <div
                        class="wizard-pf-review-item"
                      >
                        <span
                          class="wizard-pf-review-item-label"
                        >
                          Step 1.1 Label:
                        </span>
                        <span
                          class="wizard-pf-review-item-value"
                        >
                          Brian Johnson
                        </span>
                      </div>
                      <div
                        class="wizard-pf-review-item"
                      >
                        <span
                          class="wizard-pf-review-item-label"
                        >
                          Step 1.2 Label:
                        </span>
                        <span
                          class="wizard-pf-review-item-value"
                        >
                          This is the description.
                        </span>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Wizard sidebar renders properly 1`] = `
<div
  class=""
>
  <div
    class="wizard-pf-header"
  >
    <h4
      class="wizard-pf-title"
    >
      Wizard Title
    </h4>
  </div>
  <div
    class="wizard-pf-body"
  >
    <section
      class="wizard-pf-row"
    >
      <div
        class="wizard-pf-sidebar"
      >
        <ul
          class="list-group"
        >
          <li
            class="active list-group-item"
          >
            <a
              href="#"
            >
              <span
                class="wizard-pf-substep-number"
              >
                1A.
              </span>
              <span
                class="wizard-pf-substep-title"
              >
                Details
              </span>
            </a>
          </li>
        </ul>
      </div>
    </section>
  </div>
</div>
`;

exports[`Wizard steps renders properly 1`] = `
<div
  class=""
>
  <div
    class="wizard-pf-header"
  >
    <h4
      class="wizard-pf-title"
    >
      Wizard Title
    </h4>
  </div>
  <div
    class="wizard-pf-body"
  >
    <div
      class="wizard-pf-steps"
    >
      <ul
        class="wizard-pf-steps-indicator"
      >
        <li
          class="wizard-pf-step"
        >
          <a
            href="#"
          >
            <span
              class="wizard-pf-step-number"
            >
              Step 1
            </span>
            <span
              class="wizard-pf-step-title"
            >
              Step 1
            </span>
            <span
              class="wizard-pf-step-title-substep"
            >
              Step 1.1
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
